# tiny-dashboard

./: .gitignore  CMakeLists.txt  README.md
include/td/: module.h
include/windows-backend/: IWindowsBackend.h  X11Backend.h
src/: log.h  main.cpp
src/backend/: i_windows_backend.h
src/backend/x11/: backend.cpp  backend.h  window.cpp  window.h  window_info.cpp
src/modules/: module.h  modules.json
src/modules/minresclo/: CMakeLists.txt  module.cpp  module.h
src/ui/: Center.qml  center.qml  centre.cpp  centre.h  mouse_tracker_proxy.cpp  mouse_tracker_proxy.h  resources.qrc  tiny-dashboard.qml
src/windows-backend/: X11Backend.cpp  i_window.h  i_windows_backend.h
src/windows-backend/x11/: backend.h  window.h  window_info.h
windows-backend/include/: X11Backend.h
windows-backend/src/: X11Backend.cpp
